Fixed problem with adaptive on small resolutions

--- a/src/scss/_info.scss
+++ b/src/scss/_info.scss
@@ -32,7 +32,7 @@
             text-align: center;
 
         }
-        info__img{
+        .info__img{
             @media (max-width: $breakpoint992) {
                 max-width:100%;
                 width: 100%;
@@ -40,7 +40,7 @@
             }
             @media (max-width: $breakpoint768) {
                 max-width:450px;
-                // margin-top: 35px;
+                margin-top: 35px;
             }
         }
     }
